--- a/css/styles.scss
+++ b/css/styles.scss
@@ -45,6 +45,11 @@ body {
   font-size: rem(14);
 }
 
+main{
+  position: relative;
+  z-index: 0;
+}
+
 a { 
   color: inherit;
   text-decoration: none;
@@ -64,15 +69,12 @@ header,main,section,footer, div, ul, li, h1,h2,h3,dl,dt,dd
 
 .inner{
   margin: 0 auto;
-  max-width: 1200px;
+  max-width: 1280px;
   width: 100%;
-  // background-color: rgba(241,92,168,0.2);
-  padding: 0 20px;
+  background-color: rgba(241,92,168,0.2);
+  padding: 0 40px;
 }
 
-.en-title{
-  font-family: 'Montserrat', sans-serif;
-}
 
 section{
   padding-bottom: 100px;
@@ -91,7 +93,6 @@ section{
     content: "";
     width: 100%;
     height: 100px;
-    background-color: rgba(0, 0, 0, 0.3);
     background: linear-gradient(to bottom, #C2E9FB, #A1C4FD);
     display: block;
     position: absolute;
@@ -109,16 +110,21 @@ section{
   }
 }
 
+.sec-heading--ja{
+  font-size: rem(16);
+  letter-spacing: 0.3em;
+  line-height: 1;
+}
+
 .sec-sub-heading{
   font-size: rem(24);
   position: relative;
   border-bottom: 3px solid #333;
   display: inline-block;
-  margin-bottom: 40px;
 
   &::after{
-    position: absolute;
     content: " ";
+    position: absolute;
     display: block;
     border-bottom: solid 3px #ffd54d;
     bottom: -3px;
@@ -126,10 +132,47 @@ section{
   }
 }
 
-.small-title{
-  font-size: rem(16);
-  letter-spacing: 0.3em;
-  line-height: 1;
+@media (min-width: 768px){
+  section{
+    padding-bottom: 150px;
+  }
+
+  .sec-heading{
+    font-size: rem(90);
+    padding: 130px 80px 0;
+    margin-bottom: 100px;
+
+    &::before{
+      height: 210px;
+    }
+  }
+
+  .sec-heading--ja{
+    font-size: rem(20);
+  }
+
+  .sec-sub-heading{
+    font-size: rem(32);
+    position: relative;
+    border-bottom: 3px solid #333;
+    display: inline-block;
+  
+    &::after{
+      content: " ";
+      position: absolute;
+      display: block;
+      border-bottom: solid 3px #ffd54d;
+      bottom: -3px;
+      width: 30%;
+    }
+  }
+
+
+
+}
+
+.en-title{
+  font-family: 'Montserrat', sans-serif;
 }
 
 .btn{
@@ -147,6 +190,7 @@ section{
     border: 1px solid #000;
     width: 200px;
     border-radius: 4px;
+    background-color: #fff;
 
     &::after{
       content: "";
@@ -170,6 +214,7 @@ section{
 
     &::after{
       content:"";
+      display: block;
       width: 100%;
       background-color: $accentColor;
       position: absolute;
@@ -177,10 +222,11 @@ section{
       height: 100%;
       top: 8px;
       left: 8px;
-      display: block;
+      // transition: .4s;
     }
   }
 }
+
 
 /* -------------------------------------------- */
 /* header */
@@ -193,6 +239,7 @@ section{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    // border: 1px solid #000;
   }
 
   &__logo{
@@ -207,6 +254,42 @@ section{
   font-size: rem(30);
 }
 
+.header-nav{
+  display: none;
+  
+  &__list{
+    display: flex;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+
+  &__item:not(:first-child){
+    margin-left: 30px;
+  }
+
+  &__link{
+    display: inline-block;
+  }
+}
+
+
+@media (min-width: 768px) {
+  .header{
+    height: 100px;
+
+    &__logo{
+      font-size: rem(28);
+    }
+  }
+
+  .burger{
+    display: none;
+  }
+
+  .header-nav{
+    display: block;
+  }
+}
 
 /* -------------------------------------------- */
 /* mv */
@@ -219,10 +302,18 @@ section{
   color: #fff;
   letter-spacing: 0.15em;
   padding: 60px 0;
+  font-size: rem(33);
 }
 
 .color--yellow{
   color: $accentColor;
+}
+
+@media (min-width: 768px){
+  .site-title{
+    padding: 140px 0;
+    font-size: rem(80);
+  }
 }
 
 /* -------------------------------------------- */
@@ -230,6 +321,10 @@ section{
 /* -------------------------------------------- */
 .works{
   text-align: center;
+
+  &__explain{
+    margin-top: 20px;
+  }
 
   &__item-wrapper{
     margin-top: 40px;
@@ -328,6 +423,7 @@ section{
   &__list{
     padding: 30px 20px 50px;
     position: relative;
+    margin-top: 40px;
 
     &--odd{
       background-color: #EFEFEF;
@@ -337,7 +433,6 @@ section{
     }
   }
 
-
   &__title{
     font-size: rem(20);
     font-weight: bold;
@@ -345,20 +440,127 @@ section{
 
   &__explain{
     margin-top: 10px;
+    min-height: 42px;
   }
 
   &__image{
-    margin-top: 40px;
+    margin-top: 20px;
   }
-
 }
 
 .fa-solid{
   margin-left: 8px;
 }
 
+@media (min-width: 768px){
+  .practice{
+
+    &__wrapper{
+      margin-top: 80px;
+    }
+
+    &__flex-con{
+      display: flex;
+    }
+    
+    &__list{
+      padding: 50px 20px 50px;
+      width: calc(100%/3);
+    }
+  
+    &__title{
+      font-size: rem(28);
+    }
+  
+    &__explain{
+      margin-top: 10px;
+    }
+  
+    &__image{
+      // margin-top: 40px;
+    }
+  }
+}
+
+/* -------------------------------------------- */
+/* about */
+/* -------------------------------------------- */
+.about{
+  &__wrapper{
+
+  }
+}
+
+.about-image{
+
+  &__wrapper{
+    width: 100%;
+    background-color: #000;
+    padding: 30px 0 20px;
+  }
+
+  &__image{
+    width: 100px;
+    height: 100px;
+    margin: 0 auto 10px;
+  }
+
+  &__content-frame{
+    width: 100%;
+    padding: 10px 24px 0;
+  }
+
+  &__text{
+    font-size: rem(16);
+    padding: 1em 0.8em;
+    min-height: 70px;
+    border: 4px solid #fff;
+    border-radius: 6px;
+    position: relative;
+    color: #fff;
+    font-family: 'DotGothic16', sans-serif;
+  }
+}
+
+.about-body{
+
+  &__wrapper{
+    background-color: #F7F7F7;
+    position: relative;
+    z-index: -2;
+    padding: 60px 20px;
+  }
+
+  &__title{
+    font-size: rem(20);
+    font-weight: bold;
+  }
+
+  &__content-list{
+    margin-top: 10px;
+  }
+
+  &__content{
+    margin-top: 30px;
+  }
+}
 
 
+@media (min-width: 768px){
+
+}
+/* -------------------------------------------- */
+/* contact */
+/* -------------------------------------------- */
+.contact{
+  background-color: #fff;
+  position: relative;
+  z-index: -2;
+}
+
+@media (min-width: 768px){
+
+}
 
 /* -------------------------------------------- */
 /* footer */
@@ -380,6 +582,15 @@ section{
   }
 }
 
+@media (min-width: 768px){
+
+}
+
+
+
+
+
+
 
 /* -------------------------------------------- */
 /* header */
@@ -387,19 +598,10 @@ section{
 
 
 
-
 /* -------------------------------------------- */
 /* header */
 /* -------------------------------------------- */
 
-
-
-/* -------------------------------------------- */
-/* header */
-/* -------------------------------------------- */
-/* -------------------------------------------- */
-/* header */
-/* -------------------------------------------- */
 
 
 
