--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,6 @@
   box-sizing: border-box;
 }
 
-.mt-70 {
-  margin-top: 70px;
-}
-
 .thum {
   aspect-ratio: 16/9;
   width: 100%;
@@ -39,6 +35,11 @@ body {
   font-size: 0.875rem;
 }
 
+@media (min-width: 768px) {
+  body {
+    font-size: 1rem;
+  }
+}
 main {
   position: relative;
   z-index: 0;
@@ -58,7 +59,6 @@ img {
   margin: 0 auto;
   max-width: 1280px;
   width: 100%;
-  background-color: rgba(241, 92, 168, 0.2);
   padding: 0 40px;
 }
 
@@ -150,7 +150,7 @@ section {
 
 .btn {
   display: block;
-  padding: 13px 26px;
+  padding: 1em 2em;
   line-height: 1;
   text-align: center;
   margin-left: auto;
@@ -195,6 +195,22 @@ section {
   left: 8px;
 }
 
+.mt-70 {
+  margin-top: 70px;
+}
+
+@media (min-width: 768px) {
+  .btn--more {
+    font-size: 1rem;
+    width: 230px;
+  }
+  .mt-70 {
+    margin-top: 100px;
+  }
+  .mla {
+    margin-left: initial;
+  }
+}
 /* -------------------------------------------- */
 /* header */
 /* -------------------------------------------- */
@@ -302,11 +318,6 @@ section {
 }
 .works__item-btn {
   margin-top: 40px;
-}
-
-.bbb {
-  background-color: #ccc;
-  padding: 30px 0 50px;
 }
 
 .slideBtn {
@@ -425,6 +436,7 @@ section {
 }
 
 .about-body__wrapper {
+  width: 100%;
   background-color: #F7F7F7;
   position: relative;
   z-index: -2;
@@ -438,9 +450,53 @@ section {
   margin-top: 10px;
 }
 .about-body__content {
-  margin-top: 30px;
+  margin-top: 20px;
 }
 
+@media (min-width: 768px) {
+  .about__wrapper {
+    display: flex;
+    flex-direction: row-reverse;
+    position: relative;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 0 40px;
+  }
+  .about-image__wrapper {
+    width: 50%;
+    padding: 30px 0 30px;
+    position: absolute;
+    top: 50%;
+    left: 40px;
+    transform: translateY(-50%);
+  }
+  .about-image__image {
+    width: 120px;
+    height: 120px;
+    margin: 0 auto 10px;
+  }
+  .about-image__content-frame {
+    width: 100%;
+    padding: 10px 24px 0;
+  }
+  .about-image__text {
+    font-size: 1.25rem;
+    padding: 1em 0.8em;
+    min-height: 100px;
+  }
+  .about-body__wrapper {
+    width: 53%;
+    padding: 80px 50px 80px 110px;
+  }
+  .about-body__title {
+    font-size: 1.5rem;
+  }
+  .about-body__content-list {
+    margin-top: 30px;
+  }
+}
 /* -------------------------------------------- */
 /* contact */
 /* -------------------------------------------- */
@@ -450,6 +506,11 @@ section {
   z-index: -2;
 }
 
+@media (min-width: 768px) {
+  .contact {
+    text-align: center;
+  }
+}
 /* -------------------------------------------- */
 /* footer */
 /* -------------------------------------------- */
