--- a/css/styles.scss
+++ b/css/styles.scss
@@ -49,11 +49,6 @@ body {
   }
 }
 
-main{
-  position: relative;
-  z-index: 0;
-}
-
 a { 
   color: inherit;
   text-decoration: none;
@@ -75,7 +70,13 @@ header,main,section,footer, div, ul, li, h1,h2,h3,dl,dt,dd
   margin: 0 auto;
   max-width: 1280px;
   width: 100%;
-  padding: 0 40px;
+  padding: 0 20px;
+}
+
+@media (min-width: 768px){
+  .inner{
+    padding: 0 40px;
+  }
 }
 
 
@@ -89,19 +90,16 @@ section{
   line-height: 1; //微調整
   letter-spacing: 0.1em;
   position: relative;
-  padding: 60px 20px 0;
+  padding-top: 60px;
   margin-bottom: 50px;
 
-  &::before{
-    content: "";
-    width: 100%;
-    height: 100px;
+  &__bg{
     background: linear-gradient(to bottom, #C2E9FB, #A1C4FD);
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
+    margin-left: calc(50% - 50vw);
+    margin-right: calc(50% - 50vw);
+    padding-left: calc(50vw - 50%);
+    padding-right: calc(50vw - 50%);
+    height: 100px;
   }
 
   &--left{
@@ -142,10 +140,11 @@ section{
 
   .sec-heading{
     font-size: rem(90);
-    padding: 130px 80px 0;
+    // padding: 130px 80px 0;
+    padding-top: 130px;
     margin-bottom: 100px;
 
-    &::before{
+    &__bg{
       height: 210px;
     }
   }
@@ -353,6 +352,8 @@ section{
   &__item-wrapper{
     margin-top: 40px;
     position: relative;
+    display: flex;
+    flex-direction: column;
   }
   
   &__item-list{
@@ -434,11 +435,14 @@ section{
   &__wrapper{
     margin-top: 80px;
   }
+
+  &__list-wrapper{
+    margin-top: 40px;
+  }
   
   &__list{
     padding: 30px 20px 50px;
     position: relative;
-    margin-top: 40px;
 
     &--odd{
       background-color: #EFEFEF;
@@ -468,14 +472,60 @@ section{
 }
 
 @media (min-width: 768px){
+  .works{
+  
+    &__item-wrapper{
+      margin-top: 60px;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+    
+    &__item-list{
+      width: 31.66%;
+    }
+  
+    &__item-title{
+      font-size: rem(20);
+      padding: 30px 20px;
+    }
+  }
+  
+  .slideBtn{
+    width: 40px;
+    height: 70px;
+  
+    &--left{ 
+      left: -20px;
+  
+      &::after{
+        width: 10px;
+        height: 10px;
+        margin-top: 30px;
+  
+      }
+    }
+  
+    &--right{
+      right: -20px;
+  
+      &::after{
+        width: 10px;
+        height: 10px;
+        margin-top: 30px;
+      }
+    }
+  
+  }
+
   .practice{
 
     &__wrapper{
       margin-top: 80px;
     }
 
-    &__flex-con{
+    &__list-wrapper{
       display: flex;
+      margin-top: 60px;
     }
     
     &__list{
@@ -498,16 +548,17 @@ section{
 /* -------------------------------------------- */
 .about{
   &__wrapper{
-
+    width: 100%;
   }
 }
 
 .about-image{
 
   &__wrapper{
-    width: 100%;
     background-color: #000;
     padding: 30px 0 20px;
+    margin-left: calc(50% - 50vw);
+    margin-right: calc(50% - 50vw);
   }
 
   &__image{
@@ -539,9 +590,7 @@ section{
     width: 100%;
     // border: 1px solid #000;
     background-color: #F7F7F7;
-    position: relative;
-    z-index: -2;
-    padding: 60px 20px;
+    padding: 60px 0;
   }
 
   &__title{
@@ -564,14 +613,7 @@ section{
 
     &__wrapper{
       display: flex;
-      flex-direction: row-reverse;
       position: relative;
-      justify-content: space-between;
-
-      width: 100%;
-      max-width: 1280px;
-      margin: 0 auto;
-      padding: 0 40px;
     }
   }
 
@@ -582,19 +624,20 @@ section{
       padding: 30px 0 30px;
       position: absolute;
       top: 50%;
-      left: 40px;
+      right: 0;
       transform: translateY(-50%);
+      margin-left: auto;
+      margin-right: auto;
     }
   
     &__image{
       width: 120px;
       height: 120px;
-      margin: 0 auto 10px;
+      // margin: 0 auto 10px;
     }
   
     &__content-frame{
-      width: 100%;
-      padding: 10px 24px 0;
+      padding: 10px 90px 0;
     }
   
     &__text{
@@ -608,7 +651,7 @@ section{
 
     &__wrapper{
       width: 53%;
-      padding: 80px 50px 80px 110px;
+      padding: 80px 60px 80px 80px;
     }
   
     &__title{
@@ -627,8 +670,8 @@ section{
 /* -------------------------------------------- */
 .contact{
   background-color: #fff;
-  position: relative;
-  z-index: -2;
+  // position: relative;
+  // z-index: -2;
 }
 
 @media (min-width: 768px){
