--- a/css/styles.scss
+++ b/css/styles.scss
@@ -3,27 +3,18 @@
   box-sizing: border-box;
 }
 
+/* -------------------------------------------- */
+/* 変数 */
+/* -------------------------------------------- */
 @function rem($px){
   @return ($px/16) *1rem;
 }
 
 $accentColor: #FFD54D;
 
-
-
-.thum{
-  aspect-ratio: 16 / 9;
-  width: 100%;
-  height: auto;
-  overflow: hidden;
-
-  img{
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-  }
-}
-
+/* -------------------------------------------- */
+/* リセット*/
+/* -------------------------------------------- */
 body,h1,h2,h3,h4,h5,p,ul,li,ol,dl,dt,dd,figure,input,textarea {
   margin: 0;
   padding: 0;
@@ -33,9 +24,22 @@ body,h1,h2,h3,h4,h5,p,ul,li,ol,dl,dt,dd,figure,input,textarea {
   appearance: none;
   -webkit-appearance: none;
 	border-radius: 0;
-
 }
 
+a { 
+  color: inherit;
+  text-decoration: none;
+}
+
+img{
+  max-width:100%;
+  vertical-align: bottom;
+}
+
+/* -------------------------------------------- */
+/* 共通部分 */
+/* -------------------------------------------- */
+// 全体
 body {
   font-family: 'Noto Sans', sans-serif; //JPにするか否か…
   letter-spacing: 0.1em;
@@ -49,28 +53,13 @@ body {
   }
 }
 
-a { 
-  color: inherit;
-  text-decoration: none;
-}
-
-img{
-  max-width:100%;
-  vertical-align: bottom;
-}
-
-
-header,main,section,footer, div, ul, li, h1,h2,h3,dl,dt,dd
-{
-  // background-color: rgba(0,200,100,0.1);
-  // border: 1px solid rgba(0,0,0,0.1);
-}
-
+//inner
 .inner{
   margin: 0 auto;
   max-width: 1280px;
   width: 100%;
   padding: 0 20px;
+  position: relative;
 }
 
 @media (min-width: 768px){
@@ -79,7 +68,7 @@ header,main,section,footer, div, ul, li, h1,h2,h3,dl,dt,dd
   }
 }
 
-
+// セクション関連
 section{
   padding-bottom: 100px;
 }
@@ -140,7 +129,6 @@ section{
 
   .sec-heading{
     font-size: rem(90);
-    // padding: 130px 80px 0;
     padding-top: 130px;
     margin-bottom: 100px;
 
@@ -168,9 +156,20 @@ section{
       width: 30%;
     }
   }
+}
 
-
-
+/* -------------------------------------------- */
+/* パーツ類 */
+/* -------------------------------------------- */
+.q{
+  position: fixed;
+  top: 0;
+  z-index: 100;
+  cursor: pointer;
+  border: 1px solid #000;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
 }
 
 .en-title{
@@ -183,9 +182,9 @@ section{
   line-height: 1;
   text-align: center;
   margin-left: auto; 
-  margin-right: auto; 
-  margin-top: 60px;
+  margin-right: auto;
   background-color: transparent;
+  margin-top: 60px;
   
   &--more{
     font-size: rem(14);
@@ -228,6 +227,19 @@ section{
     }
   }
 }
+
+.thum{
+  aspect-ratio: 16 / 9;
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+
+  img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+}
 .mt-70{
   margin-top: 70px;
 }
@@ -240,7 +252,7 @@ section{
       width: 230px;
     }
   }
- 
+
   .mt-70{
     margin-top: 100px;
   }
@@ -262,7 +274,7 @@ section{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    // border: 1px solid #000;
+    border: 1px solid #000;
   }
 
   &__logo{
@@ -273,28 +285,89 @@ section{
   }
 }
 
-.burger{
-  font-size: rem(30);
-}
-
 .header-nav{
-  display: none;
+  font-size: rem(16);
+  font-weight: bold;
+  text-transform: uppercase;
+
+  &.active{
+    left: 0;
+  }
+}
   
+.header-nav--sp{
+  background-color: rgba(0, 0, 0, .5);
+  color: #fff;
+  width: 80%;
+  height: 100vh;
+  position: fixed;  
+  top: 0;
+  left: -150%;
+  // left: 0%;
+  z-index: 1;
+  transition: .5s;
+  overflow-y: scroll;
+
   &__list{
-    display: flex;
-    font-weight: bold;
-    text-transform: uppercase;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 
   &__item:not(:first-child){
-    margin-left: 30px;
-  }
-
-  &__link{
-    display: inline-block;
+    margin-top: 40px;
   }
 }
 
+.header-nav--pc{
+  display: none;
+}
+
+
+.burger{
+  width: 30px;
+  cursor: pointer;
+  position: relative;
+}
+
+.bar{
+  width: 100%;
+  height: 3px;
+  border-radius: 6px;
+  background-color: #000;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform:translate(-50%,0);
+  transition: all .4s;
+}
+
+.bar:nth-of-type(1){
+  transform:translate(-50%,10px);
+}
+
+.bar:nth-of-type(3){
+  transform:translate(-50%,-10px);
+}
+
+.burger.active .bar:nth-of-type(2){
+  opacity: 0;
+}
+
+.burger.active .bar:nth-of-type(1){
+  transform: rotate(-45deg);
+  left: 0%;
+}
+
+.burger.active .bar:nth-of-type(3){
+  transform: rotate(45deg);
+  left: 0%;
+}
+
+body.active{
+  overflow-y: hidden;
+}
 
 @media (min-width: 768px) {
   .header{
@@ -309,9 +382,22 @@ section{
     display: none;
   }
 
-  .header-nav{
-    display: block;
+  .header-nav--sp{
+    // display: none;
   }
+
+  .header-nav--pc{
+    display: block;
+
+    &__list{
+      display: flex;
+    }
+
+    &__item:not(:first-child){
+      margin-left: 30px;
+    }
+  }
+
 }
 
 /* -------------------------------------------- */
@@ -339,6 +425,8 @@ section{
   }
 }
 
+
+
 /* -------------------------------------------- */
 /* works */
 /* -------------------------------------------- */
@@ -353,15 +441,17 @@ section{
     margin-top: 40px;
     position: relative;
     display: flex;
-    flex-direction: column;
+    width: 100%;
+    // flex-direction: column;
   }
   
   &__item-list{
-    border: 1px solid #DEDEDE;
-    border-radius: 4px;
+    // padding: 0 15px;
   }
-
+  
   &__item{
+    border-radius: 4px;
+    border: 1px solid #DEDEDE;
     text-align: left;
     padding-bottom: 30px;
   }
@@ -376,12 +466,12 @@ section{
   }
 
   &__item-content{
-    padding: 20px;
+    padding: 20px 20px 0 20px;
     line-height: 1.6;
   }
 
   &__item-btn{
-    margin-top: 40px;
+    // margin-top: 40px;
   }
 }
 
@@ -389,11 +479,9 @@ section{
   width: 25px;
   height: 40px;
   background-color: rgba(255, 255, 255, 0.6);
-  position: absolute;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
-  top: 50%;
-  transform: translateY(-50%);
   cursor: pointer;
+  z-index: 100;
 
   &--left{ 
     left: -12px;
@@ -407,8 +495,7 @@ section{
       transform: rotate(-45deg);
       width: 6px;
       height: 6px;
-      margin-top: 15px;
-
+      margin-left: 6px;
     }
   }
 
@@ -424,10 +511,20 @@ section{
       transform: rotate(45deg);
       width: 6px;
       height: 6px;
-      margin-top: 15px;
+      margin-right: 6px;
     }
   }
 
+}
+
+.swiper-area{
+  position: relative;
+  max-width: 1280px;
+}
+
+.mainswiper{
+  max-width: 100%;
+  overflow: hidden;
 }
 
 .practice{
@@ -459,7 +556,7 @@ section{
 
   &__explain{
     margin-top: 10px;
-    min-height: 42px;
+    min-height: 48px;
   }
 
   &__image{
@@ -471,17 +568,87 @@ section{
   margin-left: 8px;
 }
 
+/* スライダー */
+.slider{
+  position: relative;
+  // height: 100%;
+  // width: 100%;
+}
+
+/*矢印*/
+.prev-arrow, 
+.next-arrow {
+  position:  absolute;
+  z-index: 1;
+  top: 40%;
+  cursor: pointer;
+  outline: none;
+  color: #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.prev-arrow {
+  left: 0;
+  border-radius: 8px 0 0 8px;
+}
+
+.next-arrow {
+  right: 0;
+  border-radius: 0 8px 8px 0;
+}
+
+.prev-arrow::before{
+  content: "";
+  display: inline-block;
+  border-top: 2px solid #000;
+  border-left: 2px solid #000;
+  transform: rotate(-45deg);
+  width: 6px;
+  height: 6px;
+}
+
+.next-arrow::before{
+  content: "";
+  display: inline-block;
+  border-top: 2px solid #000;
+  border-right: 2px solid #000;
+  transform: rotate(45deg);
+  width: 6px;
+  height: 6px;
+}
+
+/* ドット */
+.slick-dots{
+	position:absolute;
+	bottom:1% !important;
+  text-align: right !important;
+
+  li.slick-active button:before {
+    // color: $accentColor;
+  }
+
+  li button:before{
+    color: $accentColor
+  }
+}
+
 @media (min-width: 768px){
   .works{
   
     &__item-wrapper{
+      width: 100%;
       margin-top: 60px;
-      flex-direction: row;
       justify-content: space-between;
     }
     
     &__item-list{
       width: 31.66%;
+    }
+
+    &__item{
+      
     }
   
     &__item-title{
@@ -500,8 +667,6 @@ section{
       &::after{
         width: 10px;
         height: 10px;
-        margin-top: 30px;
-  
       }
     }
   
@@ -511,10 +676,21 @@ section{
       &::after{
         width: 10px;
         height: 10px;
-        margin-top: 30px;
       }
     }
   
+  }
+
+  .prev-arrow::before{
+    width: 10px;
+    height: 10px;
+    margin-left: 6px;
+  }
+  
+  .next-arrow::before{
+    width: 10px;
+    height: 10px;
+    // margin-right: 6px;
   }
 
   .practice{
