--- a/css/styles.css
+++ b/css/styles.css
@@ -141,16 +141,6 @@ section {
 /* -------------------------------------------- */
 /* パーツ類 */
 /* -------------------------------------------- */
-.q {
-  position: fixed;
-  top: 10px;
-  right: 20px;
-  z-index: 100;
-  cursor: pointer;
-  width: 60px;
-  height: 50px;
-}
-
 .en-title {
   font-family: "Montserrat", sans-serif;
 }
@@ -236,19 +226,26 @@ section {
 /* -------------------------------------------- */
 .header {
   height: 70px;
+  background-color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 .header__wrapper {
   height: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid #000;
 }
 .header__logo {
   font-size: 1.125rem;
   font-weight: bold;
   line-height: 1.5;
   letter-spacing: 0.1em;
+}
+.header__logo.fontChang {
+  font-size: 0.875rem;
 }
 
 .header-nav {
@@ -288,10 +285,42 @@ section {
 
 .burger {
   width: 30px;
+  height: 30px;
   cursor: pointer;
   position: relative;
+  z-index: 1000;
 }
 
+header.fadein {
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 4px 6px #ddd;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  -webkit-animation: fadein 0.4s ease;
+          animation: fadein 0.4s ease;
+  height: 50px;
+  z-index: 100000;
+}
+
+@-webkit-keyframes fadein {
+  0% {
+    transform: translateY(-100px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadein {
+  0% {
+    transform: translateY(-100px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
 .bar {
   width: 100%;
   height: 3px;
