--- a/css/styles.scss
+++ b/css/styles.scss
@@ -163,16 +163,6 @@ section{
 /* -------------------------------------------- */
 /* パーツ類 */
 /* -------------------------------------------- */
-.q{
-  position: fixed;
-  top: 10px;
-  right: 20px;
-  z-index: 100;
-  cursor: pointer;
-  // border: 1px solid #000;
-  width: 60px;
-  height: 50px;
-}
 
 .en-title{
   font-family: 'Montserrat', sans-serif;
@@ -270,13 +260,17 @@ section{
 /* -------------------------------------------- */
 .header{
   height: 70px;
+  background-color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
 
   &__wrapper{
     height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 1px solid #000;
   }
 
   &__logo{
@@ -284,6 +278,10 @@ section{
     font-weight: bold;
     line-height: 1.5;
     letter-spacing: 0.1em;
+    &.fontChang{
+      font-size: rem(14);
+      
+    }
   }
 }
 
@@ -296,6 +294,7 @@ section{
     left: 0;
   }
 }
+
   
 .header-nav--sp{
   background-color: rgba(0, 0, 0, .8);
@@ -326,11 +325,33 @@ section{
   display: none;
 }
 
-
 .burger{
   width: 30px;
+  height: 30px;
   cursor: pointer;
   position: relative;
+  z-index: 1000;
+}
+
+header.fadein{
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 4px 6px #ddd;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  animation: fadein .4s ease;
+  height: 50px;
+  z-index: 100000;
+}
+
+@keyframes fadein{
+  0%{
+    transform: translateY(-100px);
+  }
+  100%{
+    transform: translateY(0);
+  }
 }
 
 .bar{
@@ -370,6 +391,7 @@ section{
 body.active{
   overflow-y: hidden;
 }
+
 
 @media (min-width: 768px) {
   .header{
