--- a/css/styles.css
+++ b/css/styles.css
@@ -389,7 +389,7 @@ body.active {
 .site-title {
   color: #fff;
   letter-spacing: 0.15em;
-  padding: 60px 0;
+  padding: 130px 0 60px;
   font-size: 2.0625rem;
 }
 
@@ -399,7 +399,7 @@ body.active {
 
 @media (min-width: 768px) {
   .site-title {
-    padding: 140px 0;
+    padding: 240px 0 140px;
     font-size: 5rem;
   }
 }
